[Minor] Configure Ant script to copy test projects binaries to dist
git-svn-id: http://svn.code.sf.net/adobe/osmf/svn/osmf/trunk@2036 a9308255-753e-0410-a2e9-80b3fbc4fff6

--- a/build.xml
+++ b/build.xml
@@ -101,6 +101,15 @@
 		<copy todir="${dist.dir}/Zeri" overwrite="true" failonerror="false">
 			<fileset dir="${source.dir}/apps/certification/zeri/ZeriCertificationPlayer/bin" />
 		</copy>
+		<copy todir="${dist.dir}/Test" overwrite="true" failonerror="false">
+			<fileset dir="${source.dir}/framework/OSMFTest/bin" />
+		</copy>
+		<copy todir="${dist.dir}/Test" overwrite="true" failonerror="false">
+			<fileset dir="${source.dir}/framework/OSMFAirTest/bin" />
+		</copy>
+		<copy todir="${dist.dir}/Test" overwrite="true" failonerror="false">
+			<fileset dir="${source.dir}/framework/OSMFTestNew/bin" />
+		</copy>
 	</target>
 
 	<target name="OSMF.source">
