another minor build.xml fix
git-svn-id: http://svn.code.sf.net/adobe/osmf/svn/osmf/trunk@2041 a9308255-753e-0410-a2e9-80b3fbc4fff6

--- a/build.xml
+++ b/build.xml
@@ -57,7 +57,7 @@
 		<antcall target="OSMF.compile.plugins" />
 		<antcall target="OSMF.compile.samples" />
 		<antcall target="OSMF.compile.zeri" />
-		<target name="OSMF.test">
+		<antcall target="OSMF.test" />
 	</target>
 
 	<target name="OSMF.test">
