Attempt to fix Debug build
git-svn-id: http://svn.code.sf.net/adobe/osmf/svn/osmf/trunk@2068 a9308255-753e-0410-a2e9-80b3fbc4fff6

--- a/build.xml
+++ b/build.xml
@@ -242,7 +242,7 @@
 				output="@{projectDir}/bin/@{project}.swc"
 				include-classes="${@{project}.classes}"
 				optimize="true"
-				debug="false"
+				debug="${logging}"
 				fork="false"
 				target-player="${flash.target.player}"
 			>
