Fix for FM-1275 ( http://bugs.adobe.com/jira/browse/FM-1275) - refactoring of the integration tests to be more reliable
git-svn-id: http://svn.code.sf.net/adobe/osmf/svn/osmf/trunk@2135 a9308255-753e-0410-a2e9-80b3fbc4fff6

--- a/framework/OSMFIntegrationTestNew/.project
+++ b/framework/OSMFIntegrationTestNew/.project
@@ -3,6 +3,7 @@
 	<name>OSMFIntegrationTestNew</name>
 	<comment></comment>
 	<projects>
+		<project>FlexUnit4</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
