--- a/framework/OSMFAIRTest/.project
+++ b/framework/OSMFAIRTest/.project
@@ -31,7 +31,7 @@
 		<link>
 			<name>[source path] OSMFTest</name>
 			<type>2</type>
-			<location>C:/Dev/osmf/public/trunk/framework/OSMFTest</location>
+			<location>/Work/osmf/trunk-osmf/framework/OSMFTest</location>
 		</link>
 	</linkedResources>
 </projectDescription>
