git-svn-id: http://svn.code.sf.net/adobe/osmf/svn/osmf/trunk@2172 a9308255-753e-0410-a2e9-80b3fbc4fff6

--- a/framework/OSMFIntegrationTestNew/.project
+++ b/framework/OSMFIntegrationTestNew/.project
@@ -4,6 +4,7 @@
 	<comment></comment>
 	<projects>
 		<project>FlexUnit4</project>
+		<project>FlexUnit4UIListener</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
