Update OSMF project and related unit/integration project to use 4.5 release
git-svn-id: http://svn.code.sf.net/adobe/osmf/svn/osmf/trunk@2174 a9308255-753e-0410-a2e9-80b3fbc4fff6

--- a/framework/OSMFStageVideoTest/.project
+++ b/framework/OSMFStageVideoTest/.project
@@ -18,7 +18,7 @@
 		<link>
 			<name>[source path] OSMF</name>
 			<type>2</type>
-			<location>C:/work/osmf/trunk-osmf/framework/OSMF</location>
+			<location>/Work/osmf/trunk-osmf/framework/OSMF</location>
 		</link>
 	</linkedResources>
 </projectDescription>
