Fix NetMockerTest project. - added missing file TestLoaderBase.as - reflect the new structure of OSMFTest
git-svn-id: http://svn.code.sf.net/adobe/osmf/svn/osmf/trunk@2288 a9308255-753e-0410-a2e9-80b3fbc4fff6

--- a/libs/testing/NetMockerTest/.project
+++ b/libs/testing/NetMockerTest/.project
@@ -17,9 +17,9 @@
 	</natures>
 	<linkedResources>
 		<link>
-			<name>[source path] OSMFTest</name>
+			<name>[source path] src</name>
 			<type>2</type>
-			<location>C:/svn/osmf/public/trunk/framework/OSMFTest</location>
+			<locationURI>DOCUMENTS/framework/OSMFTest/src</locationURI>
 		</link>
 	</linkedResources>
 </projectDescription>
