Removing dependency on OSMFTest source classes. ( we migrated to Flex4 but not all test application were also migrated ) Updating project to build with the flash player version required by the framework.
git-svn-id: http://svn.code.sf.net/adobe/osmf/svn/osmf/trunk@2291 a9308255-753e-0410-a2e9-80b3fbc4fff6

--- a/plugins/samples/CaptioningPluginIntegrationTest/.project
+++ b/plugins/samples/CaptioningPluginIntegrationTest/.project
@@ -19,12 +19,7 @@
 		<link>
 			<name>[source path] CaptioningPlugin</name>
 			<type>2</type>
-			<location>C:/svn/osmf/public/trunk/plugins/samples/CaptioningPlugin</location>
-		</link>
-		<link>
-			<name>[source path] OSMFTest</name>
-			<type>2</type>
-			<location>C:/svn/osmf/public/trunk/framework/OSMFTest</location>
+			<location>/Work/osmf/trunk-osmf/plugins/samples/CaptioningPlugin</location>
 		</link>
 	</linkedResources>
 </projectDescription>
