--- a/plugins/samples/AdvertisementPluginSample/.project
+++ b/plugins/samples/AdvertisementPluginSample/.project
@@ -18,7 +18,7 @@
 		<link>
 			<name>[source path] src</name>
 			<type>2</type>
-			<location>C:/work2/smp/trunk/plugins/AdvertisementPlugin/src</location>
+			<location>/Work/osmf/trunk-osmf/plugins/samples/AdvertisementPlugin/src</location>
 		</link>
 	</linkedResources>
 </projectDescription>
