--- a/plugins/samples/AkamaiBasicStreamingPluginIntegrationTest/.project
+++ b/plugins/samples/AkamaiBasicStreamingPluginIntegrationTest/.project
@@ -15,4 +15,11 @@
 		<nature>com.adobe.flexbuilder.project.flexnature</nature>
 		<nature>com.adobe.flexbuilder.project.actionscriptnature</nature>
 	</natures>
+	<linkedResources>
+		<link>
+			<name>[source path] AkamaiBasicStreamingPlugin</name>
+			<type>2</type>
+			<location>/Work/osmf/trunk-osmf/plugins/samples/AkamaiBasicStreamingPlugin</location>
+		</link>
+	</linkedResources>
 </projectDescription>
