--- a/apps/samples/plugins/AkamaiPluginSample/.project
+++ b/apps/samples/plugins/AkamaiPluginSample/.project
@@ -15,4 +15,21 @@
 		<nature>com.adobe.flexbuilder.project.flexnature</nature>
 		<nature>com.adobe.flexbuilder.project.actionscriptnature</nature>
 	</natures>
+	<linkedResources>
+		<link>
+			<name>[source path] AkamaiBasicStreamingPlugin</name>
+			<type>2</type>
+			<location>/Work/osmf/trunk-osmf/plugins/samples/AkamaiBasicStreamingPlugin</location>
+		</link>
+		<link>
+			<name>[source path] MASTPlugin</name>
+			<type>2</type>
+			<location>/Work/osmf/trunk-osmf/plugins/samples/MASTPlugin</location>
+		</link>
+		<link>
+			<name>[source path] SMILPlugin</name>
+			<type>2</type>
+			<location>/Work/osmf/trunk-osmf/plugins/samples/SMILPlugin</location>
+		</link>
+	</linkedResources>
 </projectDescription>
