--- a/apps/samples/plugins/CaptioningSample/.project
+++ b/apps/samples/plugins/CaptioningSample/.project
@@ -19,7 +19,7 @@
 		<link>
 			<name>[source path] CaptioningPlugin</name>
 			<type>2</type>
-			<location>C:/svn/osmf/public/trunk/plugins/samples/CaptioningPlugin</location>
+			<location>/Work/osmf/trunk-osmf/plugins/samples/CaptioningPlugin</location>
 		</link>
 	</linkedResources>
 </projectDescription>
