--- a/apps/samples/plugins/ControlBarPluginSample/.project
+++ b/apps/samples/plugins/ControlBarPluginSample/.project
@@ -19,7 +19,7 @@
 		<link>
 			<name>[source path] src</name>
 			<type>2</type>
-			<location>C:/svn/osmf/public/trunk/apps/samples/plugins/ControlBarPlugin/src</location>
+			<location>/Work/osmf/trunk-osmf/apps/samples/plugins/ControlBarPlugin/src</location>
 		</link>
 	</linkedResources>
 </projectDescription>
