--- a/apps/samples/plugins/MASTSample/.project
+++ b/apps/samples/plugins/MASTSample/.project
@@ -18,7 +18,7 @@
 		<link>
 			<name>[source path] MASTPlugin</name>
 			<type>2</type>
-			<location>C:/svn/osmf/public/trunk/plugins/samples/MASTPlugin</location>
+			<location>/Work/osmf/trunk-osmf/plugins/samples/MASTPlugin</location>
 		</link>
 	</linkedResources>
 </projectDescription>
