--- a/testing/certification/zeri/ZeriCertificationTest/.project
+++ b/testing/certification/zeri/ZeriCertificationTest/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>MediaTests</name>
+	<name>ZeriCertificationTests</name>
 	<comment></comment>
 	<projects>
 		<project>ZeriTestLibrary</project>
