--- a/samples/YouTubePluginTest/.project
+++ b/samples/YouTubePluginTest/.project
@@ -25,7 +25,7 @@
 		<link>
 			<name>[source path] src</name>
 			<type>2</type>
-			<location>C:/Users/epatru/Adobe Flash Builder 4.5/new.osmf/new_osmf/samples/YouTubePlugin/src</location>
+			<location>/Work/osmf/trunk-osmf/samples/YouTubePlugin/src</location>
 		</link>
 	</linkedResources>
 </projectDescription>
