Update projects settings to use the newer version of VAST and MAST libraries.
git-svn-id: http://svn.code.sf.net/adobe/osmf/svn/osmf/trunk@2335 a9308255-753e-0410-a2e9-80b3fbc4fff6

--- a/samples/MASTSample/.project
+++ b/samples/MASTSample/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>MASTSampleNew</name>
+	<name>MASTSample</name>
 	<comment></comment>
 	<projects>
 	</projects>
@@ -18,7 +18,7 @@
 		<link>
 			<name>[source path] src</name>
 			<type>2</type>
-			<locationURI>DOCUMENTS/samples/MASTPluginNew/src</locationURI>
+			<locationURI>DOCUMENTS/samples/MASTPlugin/src</locationURI>
 		</link>
 	</linkedResources>
 </projectDescription>
