--- a/samples/VASTLibrary/.project
+++ b/samples/VASTLibrary/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>VASTNew</name>
+	<name>VASTLibrary</name>
 	<comment></comment>
 	<projects>
 		<project>OSMF</project>
