--- a/samples/HelloWorldJavaScriptSample/.project
+++ b/samples/HelloWorldJavaScriptSample/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>HelloWorldJavaScript</name>
+	<name>HelloWorldJavaScriptSample</name>
 	<comment></comment>
 	<projects>
 	</projects>
