update files for build system
git-svn-id: http://svn.code.sf.net/adobe/osmf/svn/osmf/trunk@2341 a9308255-753e-0410-a2e9-80b3fbc4fff6

--- a/build.properties
+++ b/build.properties
@@ -7,9 +7,11 @@
 
 #### general parameters
 player.version=1.6
+ant.home=C:/ant
+source.dir=${basedir}
 
 #### flex compiler parameters
-buildtools.dir=${basedir}/buildtools
+buildtools.dir=${source.dir}/buildtools
 FLEX_HOME=${buildtools.dir}/sdks/4.5.1
 FLEX_UNIT_HOME=${buildtools.dir}/flexunit
 
