--- a/samples/AdvertisementSample/.project
+++ b/samples/AdvertisementSample/.project
@@ -18,7 +18,7 @@
 		<link>
 			<name>[source path] src</name>
 			<type>2</type>
-			<location>/Work/osmf/trunk-osmf/samples/AdvertisementPlugin/src</location>
+			<location>C:/Users/epatru/Desktop/trunk/samples/AdvertisementPlugin/src</location>
 		</link>
 	</linkedResources>
 </projectDescription>
