--- a/samples/SyndicationLibrary/build.xml
+++ b/samples/SyndicationLibrary/build.xml
@@ -1,22 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<project name="OSMF.samples.Syndication" default="all" >
+<project name="OSMF.samples.Syndication" default="build" >
 
 	<property environment="env" />
 	<!-- load external values -->
 	<property name="properties.file" value="./build.properties"/>
 	<property file="${properties.file}" />
-
-	<taskdef resource="flexTasks.tasks" classpath="${FLEX_HOME}/ant/lib/flexTasks.jar" />
-	<taskdef resource="flexUnitTasks.tasks" classpath="${FLEX_UNIT_HOME}/flexUnitTasks-4.1.0-8.jar" />
-	<taskdef resource="net/sf/antcontrib/antcontrib.properties" classpath="${buildtools.dir}/libs/ant-contrib-1.0b3.jar" />
-
+	
 	<import file ="${buildtools.dir}/utils.xml" />
 	
-	<!-- main -->
-	<target name="all">
-		<antcall target="clean-bin" />
-		<antcall target="build" />
+	<!-- compile project -->
+	<target name="build" depends="clean-bin">
+		<OSMF.component.compile project="Syndication" projectDir="${basedir}" />
 	</target>
 
 	<!-- cleans the output directory -->
@@ -28,11 +23,6 @@
 				</fileset>
 			</delete>
 		</sequential>
-	</target>
-
-	<!-- compile OSMF -->
-	<target name="build" depends="clean-bin">
-		<OSMF.component.compile project="Syndication" projectDir="${basedir}" />
 	</target>
 
 </project>
