--- a/samples/YouTubePluginTest/build.xml
+++ b/samples/YouTubePluginTest/build.xml
@@ -1,21 +1,16 @@
-<project name="OSMF.YouTubePluginTest" default="all" >
+<project name="OSMF.YouTubePluginTest" default="run" >
 
 	<property environment="env" />
 	<!-- load external values -->
 	<property name="properties.file" value="./build.properties"/>
 	<property file="${properties.file}" />
 
-	<taskdef resource="flexTasks.tasks" classpath="${FLEX_HOME}/ant/lib/flexTasks.jar" />
-	<taskdef resource="flexUnitTasks.tasks" classpath="${FLEX_UNIT_HOME}/flexUnitTasks-4.1.0-8.jar" />
-	<taskdef resource="net/sf/antcontrib/antcontrib.properties" classpath="${buildtools.dir}/libs/ant-contrib-1.0b3.jar" />
 
 	<import file ="${buildtools.dir}/utils.xml" />
 	
-	<!-- main -->
-	<target name="all">
-		<antcall target="clean-bin" />
-		<antcall target="build" />
-		<antcall target="run" />
+	<!-- run -->
+	<target name="run" depends="build">
+		<OSMF.unittest.run project="YouTubePluginTest" projectDir="${basedir}" flexUnitPlayer="air"/>
 	</target>
 
 	<!-- cleans the output directory -->
@@ -33,9 +28,5 @@
 	<target name="build" depends="clean-bin">
 		<OSMF.unittest.compile project="YouTubePluginTest" projectDir="${basedir}" />
 	</target>
-
-	<!-- run -->
-	<target name="run">
-		<OSMF.unittest.run project="YouTubePluginTest" projectDir="${basedir}" flexUnitPlayer="air"/>
-	</target>	
+	
 </project>
