--- a/testing/certification/ZeriCertificationTest/build.xml
+++ b/testing/certification/ZeriCertificationTest/build.xml
@@ -1,25 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<project name="OSMF.ZeriCertificationTest" default="all" >
+<project name="OSMF.ZeriCertificationTest" default="run" >
 
 	<property environment="env" />
 	<!-- load external values -->
 	<property name="properties.file" value="./build.properties"/>
 	<property file="${properties.file}" />
 
-	<taskdef resource="flexTasks.tasks" classpath="${FLEX_HOME}/ant/lib/flexTasks.jar" />
-	<taskdef resource="flexUnitTasks.tasks" classpath="${FLEX_UNIT_HOME}/flexUnitTasks-4.1.0-8.jar" />
-	<taskdef resource="net/sf/antcontrib/antcontrib.properties" classpath="${buildtools.dir}/libs/ant-contrib-1.0b3.jar" />
-
 	<import file ="${buildtools.dir}/utils.xml" />
 	
 	<!-- main -->
-	<target name="all">
-		<antcall target="clean-bin" />
-		<antcall target="build" />
-		<antcall target="run" />
+	<target name="run" depends="build">
+		<OSMF.unittest.run project="ZeriCertificationTest" projectDir="${basedir}" flexUnitPlayer="air" />
 	</target>
 
+	<!-- compile project -->
+	<target name="build" depends="clean-bin" >	
+		<OSMF.unittest.compile project="ZeriCertificationTest" projectDir="${basedir}" />
+	</target>
+	
 	<!-- cleans the output directory -->
 	<target name="clean-bin">
 		<sequential>
@@ -29,15 +28,6 @@
 				</fileset>
 			</delete>
 		</sequential>
-	</target>
-
-	<!-- compile project -->
-	<target name="build" depends="clean-bin" >	
-		<OSMF.unittest.compile project="ZeriCertificationTest" projectDir="${basedir}" />
-	</target>
-
-	<target name="run">
-		<OSMF.unittest.run project="ZeriCertificationTest" projectDir="${basedir}" flexUnitPlayer="air" />
 	</target>
 
 </project>
