--- a/samples/SMPTETTPluginTest/.project
+++ b/samples/SMPTETTPluginTest/.project
@@ -19,7 +19,7 @@
 		<link>
 			<name>[source path] src</name>
 			<type>2</type>
-			<locationURI>DOCUMENTS/SMPTETTPlugin/src</locationURI>
+			<location>/Users/mjordan/__OSMF_CLEAN__/samples/SMPTETTPlugin/src</location>
 		</link>
 	</linkedResources>
 </projectDescription>
