--- a/player/StrobeMediaPlaybackAIR/.project
+++ b/player/StrobeMediaPlaybackAIR/.project
@@ -26,7 +26,7 @@
 		<link>
 			<name>[source path] src</name>
 			<type>2</type>
-			<location>/Users/aionescu/OSMF-Trunk/player/StrobeMediaPlayback/src</location>
+			<location>StrobeMediaPlayback/src</location>
 		</link>
 	</linkedResources>
 </projectDescription>
