removed StageVideo for coverage with sdk 4.1.0
git-svn-id: http://svn.code.sf.net/adobe/osmf/svn/osmf/trunk@2373 a9308255-753e-0410-a2e9-80b3fbc4fff6

--- a/framework/OSMFTest/build.xml
+++ b/framework/OSMFTest/build.xml
@@ -12,6 +12,10 @@
 	<!-- run unittests -->
 	<target name="run" depends="build">
 		<OSMF.unittest.run project="OSMFTest" projectDir="${basedir}" flexUnitPlayer="air" />
+	</target>	
+	
+	<target name="run.existing" >
+		<OSMF.unittest.run project="OSMFTest" projectDir="${basedir}" flexUnitPlayer="air" />
 	</target>
 	
 	<!-- cleans the output directory -->
