updated build system files
git-svn-id: http://svn.code.sf.net/adobe/osmf/svn/osmf/trunk@2376 a9308255-753e-0410-a2e9-80b3fbc4fff6

--- a/build.xml
+++ b/build.xml
@@ -33,11 +33,13 @@
 
 	<!-- compile framework and compile and run framework tests -->
 	<target name="core" depends="compile.osmf">
+		<subant target="build" inheritall="true" antfile="testing/NetMockerLibrary/build.xml" buildpath="."/>
         <subant target="run" inheritall="true" antfile="framework/OSMFTest/build.xml" buildpath="."/>
 	</target>
 	
 	<!-- compile strobe media player and compile and run coresponding tests -->
 	<target name="player" depends="compile.smp">
+		<subant target="build" inheritall="true" antfile="testing/NetMockerLibrary/build.xml" buildpath="."/>
         <subant target="run" inheritall="true" antfile="player/StrobeMediaPlaybackTest/build.xml" buildpath="."/>
 	</target>
 	
