--- a/build.properties
+++ b/build.properties
@@ -6,13 +6,12 @@
 ###------------------------------------------------------------###
 
 #### general parameters
-player.version=1.6
-ant.home=C:/ant
 source.dir=${basedir}
 
 #### flex compiler parameters
 buildtools.dir=${source.dir}/buildtools
-FLEX_HOME=${buildtools.dir}/sdks/4.5.1
+#FLEX_HOME=${buildtools.dir}/sdks/4.5.1
+FLEX_HOME=C:/Users/epatru/Adobe Flash Builder 4.5/new.osmf/new_osmf/buildtools/sdks/4.5.1
 FLEX_UNIT_HOME=${buildtools.dir}/flexunit
 
 #### destination folders
