build system changes: added OSMFIntegrationTest to build system
git-svn-id: http://svn.code.sf.net/adobe/osmf/svn/osmf/trunk@2404 a9308255-753e-0410-a2e9-80b3fbc4fff6

--- a/build.xml
+++ b/build.xml
@@ -35,6 +35,7 @@
 	<target name="core" depends="compile.osmf">
 		<subant target="build" inheritall="true" antfile="testing/NetMockerLibrary/build.xml" buildpath="."/>
         <subant target="run" inheritall="true" antfile="framework/OSMFTest/build.xml" buildpath="."/>
+		<subant target="run" inheritall="true" antfile="framework/OSMFIntegrationTest/build.xml" buildpath="."/>
 	</target>
 	
 	<!-- compile strobe media player and compile and run coresponding tests -->
@@ -46,6 +47,7 @@
 	<!-- run all project available tests -->
 	<target name="test">
 		<antcall target="run.unittests" />
+		<antcall target="run.integrationtests" />
 	</target>
 	
 	<!-- ========= subtargets ========= -->
@@ -119,12 +121,23 @@
 		<sequential>
 			<subant target="run" inheritall="true" antfile="framework/OSMFTest/build.xml" buildpath="."/>
 			<subant target="run" inheritall="true" antfile="player/StrobeMediaPlaybackTest/build.xml" buildpath="."/>
+			<!--
 			<subant target="run" inheritall="true" antfile="testing/NetMockerTest/build.xml" buildpath="."/>
-			<subant target="run" inheritall="true" antfile="samples/YouTubePluginTest/build.xml" buildpath="."/>	
+			<subant target="run" inheritall="true" antfile="samples/YouTubePluginTest/build.xml" buildpath="."/>
+			<fileset dir="." includes="testing/certification/ZeriCertificationTest/build.xml"/>
+			-->	
 		</sequential>
 	</target>
 	
-	<!-- creates distribuition for the entire porject -->
+	<!-- runs integration tests -->
+	<target name="run.integrationtests" >
+		<sequential>
+			<subant target="run" inheritall="true" antfile="framework/OSMFIntegrationTest/build.xml" buildpath="."/>
+		</sequential>
+	</target>
+	
+	
+	<!-- creates distribution for the entire porject -->
 	<target name="dist">
 		<antcall target="osmf.dist" />
 		<antcall target="smp.dist" />
@@ -157,12 +170,6 @@
 			<fileset dir="${basedir}" includes="/**/MASTPlugin/${output.bin}/**" />
 			<regexpmapper from="(.*)/${output.bin}/(.*)" to="\2" handledirsep="true"/>
 		</copy>
-	</target>
-	
-	<target name="source">
-		<zip destfile="${dist.dir}/OSMF_src.zip">
-			<zipfileset dir="${basedir}" prefix="OSMF" excludes="dist/**, build/**, **/bin/**, **/bin-*/**, **/generated/**, **/buildtools/**" />
-		</zip>
 	</target>
   
 	<!-- deletes the output directories -->
