[build system changes] moved distribution targets to internal script, generate ProjectTemplate.mxml from template
git-svn-id: http://svn.code.sf.net/adobe/osmf/svn/osmf/trunk@2412 a9308255-753e-0410-a2e9-80b3fbc4fff6

--- a/build.properties
+++ b/build.properties
@@ -4,7 +4,7 @@
 # backward slashed(\\)
 
 #### general parameters
-trunk.dir==${basedir}
+trunk.dir=${basedir}
 
 #### flex compiler parameters
 buildtools.dir=${trunk.dir}/buildtools
